Improvements to About

--- a/about.html
+++ b/about.html
@@ -72,6 +72,13 @@
     Fortunately, Glen Baker is a dedicated web designer and 
     everything will be completed shortly. Please check back again soon!</p>
     </div> 
+    
+    <img class='smartimg' src='assets/img/hipsterbanner.jpg' />
+	<p></p>
+    <div class='well'>
+    <p>Gather around and we'll tell you the tale of our journey....</p>
+    </div>
+    
 	</section>
 	<section class='span5'>
 	
