Fixed a handful of styling issues

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
   </head>
 
   <body>
+<div class='wrapper'>
 	<div name='top'></div>
     <!-- NAVBAR
     ================================================== -->
@@ -130,15 +131,15 @@
 </div> <!-- end whitewrapper -->
 </div> <!-- end container-fluid -->
 
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#top">Back to top&nbsp;</a></p>
-        <p>&nbsp;&copy; 2012 Wyoma Films, Inc. &middot; <a href="about.html#">Privacy</a> &middot; <a href="about.html#">Terms</a> &middot; Site created by Glen Baker - iepathos /at/ gmail</p>
-      </footer>
+    
 
     </div><!-- /.container -->
 
-
+  <!-- FOOTER -->
+      <footer class='well'>
+        <p class="pull-right"><a href="#top">Back to top&nbsp;</a></p>
+        <p>&nbsp;&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</p>
+      </footer>
 
     <!-- Le javascript
     ================================================== -->
@@ -148,6 +149,6 @@
     
     <script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/bootstrap-collapse.js"></script>
-	
+</div>	
   </body>
 </html>
