--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+  
+	<!-- So Facebook finds right img for thumbnail -->
+	<link rel='image_src' href=''>
   </head>
 
   <body>
+	<div class='wrapper'>
 	<div name='top'></div>
     <!-- NAVBAR
     ================================================== -->
@@ -113,15 +117,16 @@
 
 
 
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#top">Back to top&nbsp;</a></p>
-        <p>&nbsp;&copy; 2012 Wyoma Films, Inc. &middot; <a href="index.html#">Privacy</a> &middot; <a href="index.html#">Terms</a> &middot; Site created by Glen Baker - iepathos /at/ gmail</p>
-      </footer>
+   
 
     </div><!-- /.container -->
 
-
+    <!-- FOOTER -->
+    
+      <footer class='well'>
+        <p class="pull-right"><a href="#top">Back to top&nbsp;</a></p>
+        <p>&nbsp;&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</p>
+      </footer>
 
     <!-- Le javascript
     ================================================== -->
@@ -142,6 +147,6 @@
 		});	
 	</script>
 
-
+</div>
   </body>
 </html>
