Adjusted footer style

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
     <!-- FOOTER -->
     
-      <footer class='well'>
-        <p class="pull-right"><a href="#top">Back to top&nbsp;</a></p>
-        <p>&nbsp;&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</p>
+      <footer>
+        <p class="pull-right"><a href="#top">Back to top</a></p>
+        <p>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</p>
       </footer>
 
     <!-- Le javascript
