--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
     <img class='smartimg' src='assets/img/hipsterbanner.jpg' />
 	<p></p>
     <div class='well'>
-    <p>Gather around and we'll tell you the tale of our company's journey....</p>
+    <p>Gather around and we'll tell you the tale of our company....</p>
     </div>
     
 	</section>
@@ -87,23 +87,15 @@
 	<ul class="wyomapeople">
 		<a class='pull-right' href='mailto:chris@wyomafilms.com'>chris@wyomafilms.com&nbsp;</a>
 		<li><h5>Chris Guerrero</h5></li>
-		<p>Director and CEO</p>
+		<p>Director and Producer</p>
+	
+		<a class='pull-right' href='mailto:beth@wyomafilms.com'>beth@wyomafilms.com&nbsp;</a>
+		<li><h5>Beth Cropsey</h5></li>
+		<p>Production Coordinator and Producer</p>
 		
-		<a class='pull-right' href='mailto:mario@wyomafilms.com'>mario@wyomafilms.com&nbsp;</a>
-		<li><h5>Mario Guerrero</h5></li>
-		<p>Board Member and Writer</p>
-		
-		<a class='pull-right' href='mailto:'>beth@wyomafilms.com&nbsp;</a>
-		<li><h5>Beth Guerrero</h5></li>
-		<p>Board Member and Producer</p>
-
-		<a class='pull-right' href='mailto:'>katie@wyomafilms.com&nbsp;</a>
-		<li><h5>Katherine Guerrero</h5></li>
-		<p>Board Member and Actress</p>
-		
-		<a class='pull-right' href='mailto:'>caitlyndurkin@wyomafilms.com&nbsp;</a>
+		<a class='pull-right' href='mailto:caitlyndurkin@wyomafilms.com'>caitlyndurkin@wyomafilms.com&nbsp;</a>
 		<li><h5>Caitlyn Durkin</h5></li>
-		<p>Producer and Director</p>
+		<p>Director and Producer</p>
 		
 		<a class='pull-right' href='mailto:glenbaker@wyomafilms.com'>glenbaker@wyomafilms.com&nbsp;</a>
 		<li><h5>Glen Baker</h5></li>
@@ -122,9 +114,9 @@
 	</section>
 </div>	
 
-	<div class='well'>
 	
-	</div>
+	
+
 
     
 </div> <!-- end about class -->
@@ -133,8 +125,8 @@
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="#top">Back to top</a></p>
-        <p>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</p>
+        <span class="pull-right"><a href="#top">Back to top</a></span>
+        <span>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</span>
       </footer>
 
     </div><!-- /.container -->
