--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<link rel='image_src' href=''>
   </head>
 
-  <body>
-	<div class='wrapper'>
+  <body>  
+
 	<div name='top'></div>
     <!-- NAVBAR
     ================================================== -->
@@ -114,20 +114,64 @@
       <a class="right carousel-control" href="index.html#myCarousel" data-slide="next">&rsaquo;</a>
     </div><!-- /.carousel -->
 
+<div class='container-fluid'>
+	<div class='well'>
+	<div class='row-fluid'>
+		<h4 class='span8'>Because laughter is the gift that keeps on giving... share Wyoma Films!</h4>
+	</div>
+
+<div class='row-fluid'>
+	<iframe class='span4' allowtransparency="true" frameborder="0" scrolling="no" height='35px'
+	src="http://platform.twitter.com/widgets/follow_button.html?screen_name=wyomafilms&lang=en"></iframe>
+
+<span class='span3'>
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-annotation="inline" data-width='160'></div></span>
+
+<iframe class='span3' src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FWyomaFilms&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:25px;" allowTransparency="true"></iframe>
+
+<!-- Place this tag where you want the su badge to render -->
+<span class='span1'><su:badge layout="1"></su:badge></span>
+
+</div> <!-- End Row -->
+</div> <!-- End Well -->
+</div> <!-- end container-fluid -->
+
+<!-- StumbleUpon Badge -->
+<script type="text/javascript">
+  (function() {
+    var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
+    li.src = ('https:' == document.location.protocol ? 'https:' : 'http:') + '//platform.stumbleupon.com/1/widgets.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
+  })();
+</script>
+<!-- Facebook Badge -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- Google+ Badge -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 
 
-
-   
-
-    </div><!-- /.container -->
-
+<div class='row-fluid'>
     <!-- FOOTER -->
-    
       <footer>
-        <p class="pull-right"><a href="#top">Back to top</a></p>
-        <p>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</p>
-      </footer>
-
+        <span class="pull-right"><a href="#top">Back to top</a></span>
+        <span>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</span>
+      </footer>   
+</div>
+	
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -146,7 +190,10 @@
 			$(this).carousel('pause');
 		});	
 	</script>
+	
 
-</div>
+
+
+
   </body>
 </html>
