Cleaned up code

--- a/about.html
+++ b/about.html
@@ -114,14 +114,12 @@
 	</section>
 </div>	
 
-	
-	
 
-
-    
 </div> <!-- end about class -->
 </div> <!-- end whitewrapper -->
 </div> <!-- end container-fluid -->
+
+<div class='row-fluid'>&nbsp;</div>
 
       <!-- FOOTER -->
       <footer>
