--- a/index.html
+++ b/index.html
@@ -43,19 +43,17 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="index.html">
-			  <img src='assets/img/wyoma_logobright_h20.png'></a>
+			  <img src='assets/img/wyoma_logobright_h20.png'>
+		  </a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>           
             </ul>
-              </li>
-            </ul>
           </div><!--/.nav-collapse -->
         </div><!-- /.navbar-inner -->
       </div><!-- /.navbar -->
-
     </div><!-- /.container -->
 
 
@@ -138,17 +136,16 @@
 	</div> <!-- end container-fluid -->
 
     <!-- FOOTER -->
-    <footer>
+  	<footer>
       <span class="pull-right"><a href="#top">Back to top</a></span>
       <span>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</span>
-    </footer>   
+    </footer> 
 
     <!-- Javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     
     <script>window.jQuery || document.write('<script src="assets/js/jquery-1.8.2.min.js"><\/script>')</script>
-    
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/bootstrap-carousel.js"></script>
 	<script src="assets/js/bootstrap-collapse.js"></script>
