Fixed up click to call on contact page with responsive css

--- a/contact.html
+++ b/contact.html
@@ -125,9 +125,9 @@
           </div><!--end well -->
         
 
-		      <a href='tel:559-287-7227'>
+		      <a class='click2call' href='tel:559-287-7227'>
 			    <img class='smartimg' src='assets/img/doitwyoma.png'>
-			    <span>Click to call Wyoma Films</span>
+			    <h5 class='phonecaption'>Click to call Wyoma Films</h5> 
 		      </a> 
   
           </section><!-- end right section -->
