More code cleanup

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Wyoma Films - About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta name="description" content="About Wyoma Films Inc. - a film production company">
+    <meta name="description" content="About Wyoma Films Inc. - The story of a film production company">
     <meta name="author" content="Glen Baker">
     
     <!-- Styles -->
