--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
   
 	<!-- So Facebook finds right img for thumbnail -->
-	<link rel='image_src' href=''>
+	<link rel='image_src' href='assets/ico/favicon.png'>
   </head>
 
   <body>  
