--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Wyoma Films Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta name="description" content="Wyoma Films Inc. - a film production company">
+    <meta name="description" content="Wyoma Films Inc. - California film production company">
     <meta name="author" content="Glen Baker">
 
     <!-- Le styles -->
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
   
 	<!-- So Facebook finds right img for thumbnail -->
-	<link rel='image_src' href='assets/ico/favicon.png'>
+	<link rel='image_src' href='assets/img/iamsunmaid.png'>
   </head>
 
   <body>  
