--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<link rel='image_src' href='assets/img/wyoma_logo.png'>
   </head>
 
-  <body>  
+  <body>
 	<div name='top'></div>
     <!-- NAVBAR
     ================================================== -->
@@ -56,7 +56,7 @@
     </div><!-- /.container -->
 
 
-
+  <div class='container-fluid'>
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
@@ -107,6 +107,7 @@
       <a class="left carousel-control" href="index.html#myCarousel" data-slide="prev">&lsaquo;</a>
       <a class="right carousel-control" href="index.html#myCarousel" data-slide="next">&rsaquo;</a>
     </div> <!-- /.carousel -->
+  </div> <!-- /.container-fluid -->
 
 	<div class='container-fluid'>
 	  <div class='well'>
