Added a little corner rounding to greyglass class

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </div> <!-- /.container-fluid -->
 
 	<div class='container-fluid'>
-	  <div class='well'>
+	  <div class='greyglass'>
 		<div class='row-fluid'>
 		  <h4 class='span8'>Because laughter is the gift that keeps on giving... share Wyoma Films!</h4>
 		</div>
@@ -126,11 +126,11 @@
 		</span>
 		
 		<!-- Facebook -->
-	  <iframe class='span3' src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FWyomaFilms&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:25px;" allowTransparency="true"></iframe>
+        <iframe class='span2' src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FWyomaFilms&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=true&amp;action=like&amp;colorscheme=dark&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 		<div id="fb-root"></div>
-		
+	
 	    <!-- StumbleUpon -->
-	    <span class='span1'><su:badge layout="1"></su:badge></span>
+	    <span class='span1 offset1'><su:badge layout="1"></su:badge></span>
 	    </div> <!-- End Row -->
 	  </div> <!-- End Well -->
 	</div> <!-- end container-fluid -->
@@ -171,7 +171,7 @@
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
 	  })();
 	</script>
-	<!-- Facebook Badge -->
+    <!-- Facebook Badge -->
 	<script type='text/javascript'>
 	  (function(d, s, id) {
 		var js, fjs = d.getElementsByTagName(s)[0];
@@ -190,5 +190,6 @@
 	  })();
 	</script>
 
+    
   </body>
 </html>
