Made lot of aesthetic changeimprovements

--- a/wyomabackup/wyomafilms.com/public/about.html
+++ b/wyomabackup/wyomafilms.com/public/about.html
@@ -54,7 +54,7 @@
 
 	<!-- About.html content -->
 	<div class='container-fluid'>
-        <div class='whitewrapper'>
+	  <div class='whitewrapper'>
 		<div class='hero-unit'>
 		  <h1>The Wyoma Films Story</h1>
 		  <h2>There is so much to tell...</h2>
@@ -64,7 +64,9 @@
 		  <div class='row-fluid'>
 		    <section class='span6'>
 		      <div class='well'>
-				<p>Unfortunately, our biography is still being written.  Please check back again soon!</p>
+				<p>Unfortunately, the site is <strong>Under Construction</strong>.  
+				Fortunately, Glen Baker is a dedicated web designer and 
+				everything will be completed shortly. Please check back again soon!</p>
 			  </div> 
 			  
 			  <img class='smartimg' src='assets/img/hipsterbanner.jpg' />
@@ -85,13 +87,13 @@
 				<li><h5>Beth Cropsey</h5></li>
 					<p>Production Coordinator and Producer</p>
 		
-				<a class='pull-right'  href='mailto:caitlyndurkin@wyomafilms.com'>caitlyndurkin@wyomafilms.com&nbsp;</a>
+				<a class='pull-right' href='mailto:caitlyndurkin@wyomafilms.com'>caitlyndurkin@wyomafilms.com&nbsp;</a>
 				<li><h5>Caitlyn Durkin</h5></li>
 					<p>Director and Producer</p>
 		
 				<a class='pull-right' href='mailto:glenbaker@wyomafilms.com'>glenbaker@wyomafilms.com&nbsp;</a>
 				<li><h5>Glen Baker</h5></li>
-					<p>Web Designer and Editor</p>
+					<p>Web Designer and Writer</p>
 			  </ul>	
 			  <br/>
 	
@@ -106,12 +108,12 @@
 			</section>
 		  </div> <!-- .row-fluid -->	
 		</div> <!-- end about class -->
-      </div> <!-- ./whitewrapper -->
+	  </div> <!-- end whitewrapper -->
 	</div> <!-- end container-fluid -->
 
     <!-- FOOTER -->
     <footer>
-      <span class="pull-right"><a onclick="scrollToTop();return false;" href="#"><i class="icon-arrow-up"></i></a></span>
+      <span class="pull-right"><a href="#top">Back to top</a></span>
       <span>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</span>
     </footer>
 
