--- a/wyomabackup/wyomafilms.com/public/index.html
+++ b/wyomabackup/wyomafilms.com/public/index.html
@@ -137,7 +137,7 @@
 
     <!-- FOOTER -->
   	<footer>
-      <span class="pull-right"><a onclick="scrollToTop();return false;" href="#"><i class="icon-arrow-up"></i></a></span>
+      <span class="pull-right"><a href="#top">Back to top</a></span>
       <span>&copy; 2012 Wyoma Films, Inc. &middot; All rights reserved. Site created by Glen Baker - iepathos /at/ gmail</span>
     </footer> 
 
@@ -189,10 +189,6 @@
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 	  })();
 	</script>
-
- 
-
-
 
     
   </body>
